add exams api
